# checkasum

./: .eslintignore  .eslintrc.js  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
gui/: package-lock.json  package.json  tsconfig.json
gui/src/: interfaces.ts
gui/src/main/: native.d.ts  native.ts  primary.ts
gui/src/renderer/: render.ts
gui/stylesheets/: index.css
gui/views/: index.html
native/: Cargo.toml
native/src/: error.rs  hashing.rs  lib.rs  main.rs
src/: cli.rs  error.rs  hashing.rs  lib.rs  main.rs
src/gui/calculate/: state.rs  view.rs
src/gui/input/: state.rs  view.rs
src/gui/main/: state.rs  view.rs
src/gui/output/: state.rs  view.rs
tests/: hashing_test.rs
tests/fixtures/: sample.txt
tests/fixtures/tmp/: README.md
