[package]
name = "checkasum"
version = "1.2.0"
authors = ["mc962 <11969409+mc962@users.noreply.github.com>"]
edition = "2018"
description = "A small utility to verify the data integrity of a downloaded file with its expected checksum."
license = "MIT"
repository = "https://github.com/mc962/checkasum"
homepage = "https://github.com/mc962/checkasum"
keywords = ["checksum", "hashing"]
readme = "README.md"

[lib]
name = "checkasum"
path = "src/lib.rs"

[[bin]]
name = "checkasum"
path = "src/main.rs"

[dependencies]
ring="0.16.20"
data-encoding="2.3.2"
structopt = "0.3.22"
